server-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: frescons
  labels:
    app: mongo
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
