server-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-mongo-page-hit
  namespace: frescons
  labels:
    app: node-mongo-page-hit
spec:
  type: NodePort
  selector:
    app: node-mongo-page-hit
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30800
      protocol: TCP
