server-3.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: frescons
  labels:
    app: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30801
      protocol: TCP
