ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fresco-ingress
  namespace: frescons
spec:
  rules:
  - host: "localhost"
    http:
      paths:
      - pathType: Prefix
        path: "/nginx"
        backend:
          service:
            name: nginx
            port:
              number: 80
  - host: "localhost"
    http:
      paths:
      - pathType: Prefix
        path: "/app"
        backend:
          service:
            name: app
            port:
              number: 8000
